--- a/examples/config.yml
+++ b/examples/config.yml
@@ -1,9 +1,11 @@
 name: example
+platform: github
+secret_key: '1'
 
-setting:
-  secret_key: '1'
-  host: '0.0.0.0'
-  port: 3000
+server:
+  address: '0.0.0.0'
+  port: "15115"
+  path: '/webhooks'
 
 
 on:
